--- a/styles.css
+++ b/styles.css
@@ -187,10 +187,12 @@ td {
 .logo-box{
     display: flex;
     flex-wrap:wrap;
+    align-items: center;
+    justify-content: center;
 }
 .logo{
-    width:40px;
-    height: 40px;
+    width:38px;
+    height:38px;
     padding: 20px;
     border-radius: 6px;
     margin:0.8%;
