--- a/styles.css
+++ b/styles.css
@@ -197,12 +197,19 @@ td {
     border-radius: 6px;
     margin:0.8%;
     background: white;
-    box-shadow: #3c40434d 0px 1px 2px 0px, #3c404326 0px 2px 6px 2px; 
+    box-shadow: #3c40434d 0px 1px 2px 0px, #3c404326 0px 2px 6px 2px;
+    transition: transform 0.2s ease;
+    cursor: pointer;
 }
 body.dark-theme .logo{
     background: #303030;
     color: white;
     box-shadow: #323c443d 0px 1px 2px 0px, #32353826 0px 2px 6px 2px; 
+}
+
+.logo:hover,.logo:active{
+    transform: scale(1.3);
+    box-shadow: #00000030 0px 10px 20px, #0000003b 0px 6px 6px;
 }
 
 /* Style for First Column (Categories) */
